--- a/211002_cote_sorted.ipynb
+++ b/211002_cote_sorted.ipynb
@@ -2,139 +2,139 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 위에서 아래로"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "n = int(input())\r\n",
-    "\r\n",
-    "array = []\r\n",
-    "for i in range(n):\r\n",
-    "    array.append(int(input()))\r\n",
-    "\r\n",
-    "array = sorted(array, reverse=True)\r\n",
-    "\r\n",
-    "for i in array:\r\n",
-    "    print(i, end=' ')"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "27 15 12 "
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "array = []\n",
+    "for i in range(n):\n",
+    "    array.append(int(input()))\n",
+    "\n",
+    "array = sorted(array, reverse=True)\n",
+    "\n",
+    "for i in array:\n",
+    "    print(i, end=' ')"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 성적이 낮은 순서로 학생 출력하기"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "n = int(input())\r\n",
-    "\r\n",
-    "array = []\r\n",
-    "\r\n",
-    "for i in range(n):\r\n",
-    "    input_data = input().split()\r\n",
-    "    array.append((input_data[0], int(input_data[1])))\r\n",
-    "\r\n",
-    "array = sorted(array, key=lambda student: student[1])\r\n",
-    "\r\n",
-    "for student in array:\r\n",
-    "    print(student[0], end=' ')"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "이순신 홍길동 "
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "array = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    input_data = input().split()\n",
+    "    array.append((input_data[0], int(input_data[1])))\n",
+    "\n",
+    "array = sorted(array, key=lambda student: student[1])\n",
+    "\n",
+    "for student in array:\n",
+    "    print(student[0], end=' ')"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 두 배열의 원소 교체"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "source": [
-    "n, k = map(int, input().split())\r\n",
-    "\r\n",
-    "a = list(map(int, input().split()))\r\n",
-    "b = list(map(int, input().split()))\r\n",
-    "\r\n",
-    "a.sort()\r\n",
-    "b.sort(reverse=True)\r\n",
-    "\r\n",
-    "for i in range(k):\r\n",
-    "    if a[i] < b[i]:\r\n",
-    "        a[i], b[i] = b[i], a[i]\r\n",
-    "    else:\r\n",
-    "        break\r\n",
-    "\r\n",
-    "print(sum(a))"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "36\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "n, k = map(int, input().split())\n",
+    "\n",
+    "a = list(map(int, input().split()))\n",
+    "b = list(map(int, input().split()))\n",
+    "\n",
+    "a.sort()\n",
+    "b.sort(reverse=True)\n",
+    "\n",
+    "for i in range(k):\n",
+    "    if a[i] < b[i]:\n",
+    "        a[i], b[i] = b[i], a[i]\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "print(sum(a))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "435c7524b81c754d2a38f9b1930a50d7a83318eec9a7b6faab8c4b8cfd59b603"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit"
-  },
-  "interpreter": {
-   "hash": "435c7524b81c754d2a38f9b1930a50d7a83318eec9a7b6faab8c4b8cfd59b603"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
