--- a/211115_cote_shortestPath_02.ipynb
+++ b/211115_cote_shortestPath_02.ipynb
@@ -2,6 +2,167 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 4 8 6 \n",
+      "3 0 7 9 \n",
+      "5 9 0 4 \n",
+      "7 11 2 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 플로이드 워셜 알고리즘\n",
+    "\n",
+    "INF = int(1e9)\n",
+    "\n",
+    "n = int(input())\n",
+    "m = int(input())\n",
+    "\n",
+    "graph = [[INF] * (n + 1) for _ in range(n + 1)]\n",
+    "\n",
+    "for a in range(1, n + 1):\n",
+    "    for b in range(1, n + 1):\n",
+    "        if a == b:\n",
+    "            graph[a][b] = 0\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    graph[a][b] = c\n",
+    "\n",
+    "for k in range(1, n + 1):\n",
+    "    for a in range(1, n + 1):\n",
+    "        for b in range(1, n + 1):\n",
+    "            graph[a][b] = min(graph[a][b], graph[a][k] + graph[k][b])\n",
+    "\n",
+    "for a in range(1, n + 1):\n",
+    "    for b in range(1, n + 1):\n",
+    "        if graph[a][b] == INF:\n",
+    "            print('INFINITY')\n",
+    "        else:\n",
+    "            print(graph[a][b], end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 미래 도시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "INF = int(1e9)\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "graph = [[INF] * (n + 1) for _ in range(n + 1)]\n",
+    "\n",
+    "for a in range(1, n + 1):\n",
+    "    for b in range(1, n + 1):\n",
+    "        if a == b:\n",
+    "            graph[a][b] = 0\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    a, b = map(int, input().split())\n",
+    "    graph[a][b] = 1\n",
+    "    graph[b][a] = 1\n",
+    "\n",
+    "x, k = map(int, input().split())\n",
+    "\n",
+    "for k in range(1, n + 1):\n",
+    "    for a in range(1, n + 1):\n",
+    "        for b in range(1, n + 1):\n",
+    "            graph[a][b] = min(graph[a][b], graph[a][k] + graph[k][b])\n",
+    "\n",
+    "distance = graph[1][k] + graph[k][x]\n",
+    "\n",
+    "if distance >= INF:\n",
+    "    print('-1')\n",
+    "else:\n",
+    "    print(distance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 전보"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "INF = int(1e9)\n",
+    "\n",
+    "n, m, start = map(int, input().split())\n",
+    "graph = [[] for i in range(n + 1)]\n",
+    "distance = [INF] * (n + 1)\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    x, y, z = map(int, input().split())\n",
+    "    graph[x].append((y, z))\n",
+    "\n",
+    "def dijkstra(start):\n",
+    "    q = []\n",
+    "    heapq.heappush(q, (0, start))\n",
+    "    distance[start] = 0\n",
+    "    while q:\n",
+    "        dist, now = heapq.heappop(q)\n",
+    "        if distance[now] < dist:\n",
+    "            continue\n",
+    "        for i in graph[now]:\n",
+    "            cost = dist + i[1]\n",
+    "            if cost < distance[i[0]]:\n",
+    "                distance[i[0]] = cost\n",
+    "                heapq.heappush(q, (cost, i[0]))\n",
+    "\n",
+    "dijkstra(start)\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "max_distance = 0\n",
+    "\n",
+    "for d in distance:\n",
+    "    if d != INF:\n",
+    "        count += 1\n",
+    "        max_distance = max(max_distance, d)\n",
+    "\n",
+    "print(count - 1, max_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
