--- a/211206_cote_sort_01.ipynb
+++ b/211206_cote_sort_01.ipynb
@@ -117,6 +117,201 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# 안테나"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 내 풀이\n",
+    "\n",
+    "n = int(input())\n",
+    "houses = list(map(int, input().split()))\n",
+    "\n",
+    "distances = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    count = 0\n",
+    "    for j in range(n):\n",
+    "        count += abs(houses[i] - houses[j])\n",
+    "    distances.append((count, houses[i]))\n",
+    "\n",
+    "distances.sort()\n",
+    "\n",
+    "print(distances[0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 내 풀이 수정\n",
+    "\n",
+    "n = int(input())\n",
+    "houses = list(map(int, input().split()))\n",
+    "houses.sort()\n",
+    "\n",
+    "if len(houses) % 2 == 0:\n",
+    "    house = houses[len(houses) // 2 - 1]\n",
+    "else:\n",
+    "    house = houses[len(houses) // 2]\n",
+    "\n",
+    "print(house)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 책 답지\n",
+    "\n",
+    "n = int(input())\n",
+    "data = list(map(int, input().split()))\n",
+    "data.sort()\n",
+    "\n",
+    "print(data[(n - 1)//2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 실패율"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.125, 1), (0.42857142857142855, 2), (0.5, 3), (0.5, 4), (0, 5)]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 내 풀이\n",
+    "\n",
+    "def solution(n, stages):\n",
+    "    stages.sort()\n",
+    "    count =[]\n",
+    "    for i in range(len(stages)):\n",
+    "        if stages[i] > n:\n",
+    "            stages[i] = n\n",
+    "        if stages[i] != stages[i - 1]:\n",
+    "            if stages[i] == n:\n",
+    "                fail = 0\n",
+    "                count.append((fail, stages[i]))\n",
+    "            else:\n",
+    "                fail = stages.count(stages[i])/(len(stages) - i)\n",
+    "                count.append((fail, stages[i]))\n",
+    "    count.sort(key= lambda x: (-int(x[0]), int(x[1])))\n",
+    "\n",
+    "    return count\n",
+    "solution(5, [2, 1, 2, 6, 2, 4, 3, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function solution.<locals>.<lambda> at 0x0000021FBDE871F0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 2, 1, 5]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 책 답지\n",
+    "\n",
+    "def solution(N, stages):\n",
+    "    answer = []\n",
+    "    length = len(stages)\n",
+    "\n",
+    "    for i in range(1, N + 1):\n",
+    "        count = stages.count(i)\n",
+    "\n",
+    "        if length == 0:\n",
+    "            fail = 0\n",
+    "        else:\n",
+    "            fail = count / length\n",
+    "        answer.append((i, fail))\n",
+    "        length -= count\n",
+    "\n",
+    "    answer = sorted(answer, key=lambda t: t[1], reverse=True)\n",
+    "    answer = [i[0] for i in answer]\n",
+    "    return answer\n",
+    "\n",
+    "solution(5, [2, 1, 2, 6, 2, 4, 3, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(t)>"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
