--- a/211206_cote_sort_01.ipynb
+++ b/211206_cote_sort_01.ipynb
@@ -213,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.125, 1), (0.42857142857142855, 2), (0.5, 3), (0.5, 4), (0, 5)]"
+       "[]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,31 +243,29 @@
     "            else:\n",
     "                fail = stages.count(stages[i])/(len(stages) - i)\n",
     "                count.append((fail, stages[i]))\n",
-    "    count.sort(key= lambda x: (-int(x[0]), int(x[1])))\n",
+    "    count.sort(key= lambda x: x[0], reverse=True)\n",
+    "    result = []\n",
     "\n",
-    "    return count\n",
-    "solution(5, [2, 1, 2, 6, 2, 4, 3, 3])"
+    "    for i in count:\n",
+    "        result.append(i[1])\n",
+    "\n",
+    "    return result\n",
+    "solution(5, [2, 1, 2, 6, 2, 4, 3, 3])\n",
+    "solution(4, [4, 4, 4, 4, 4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<function solution.<locals>.<lambda> at 0x0000021FBDE871F0>\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[3, 4, 2, 1, 5]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
