--- a/211206_cote_sort_01.ipynb
+++ b/211206_cote_sort_01.ipynb
@@ -256,18 +256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[3, 4, 2, 1, 5]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 2, 1, 5]\n",
+      "[4, 1, 2, 3]\n"
+     ]
     }
    ],
    "source": [
@@ -291,26 +289,80 @@
     "    answer = [i[0] for i in answer]\n",
     "    return answer\n",
     "\n",
-    "solution(5, [2, 1, 2, 6, 2, 4, 3, 3])"
+    "print(solution(5, [2, 1, 2, 6, 2, 4, 3, 3]))\n",
+    "print(solution(4, [4, 4, 4, 4, 4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 카드 정렬하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function __main__.<lambda>(t)>"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "모르겠음\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "# 내 풀이\n",
+    "\n",
+    "n = int(input())\n",
+    "cards = []\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    cards.append(int(input()))\n",
+    "\n",
+    "cards.sort()\n",
+    "print(\"모르겠음\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 책 답지\n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "heap = []\n",
+    "for i in range(n):\n",
+    "    data = int(input())\n",
+    "    heapq.heappush(heap, data)\n",
+    "\n",
+    "result = 0\n",
+    "\n",
+    "while len(heap) != 1:\n",
+    "    one = heapq.heappop(heap)\n",
+    "    two = heapq.heappop(heap)\n",
+    "\n",
+    "    sum_value = one + two\n",
+    "    result += sum_value\n",
+    "    heapq.heappush(heap, sum_value)\n",
+    "\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
