--- a/practice_file.ipynb
+++ b/practice_file.ipynb
@@ -109,6 +109,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [5] + [2] + [9]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
