--- a/practice_file.ipynb
+++ b/practice_file.ipynb
@@ -127,6 +127,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\    /\\\n",
+      " )  ( ')\n",
+      "(  /  )\n",
+      " \\(__)|\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\    /\\\\\")\n",
+    "print(\" )  ( ')\")\n",
+    "print(\"(  /  )\")\n",
+    "print(\" \\(__)|\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2360\n",
+      "3776\n",
+      "1416\n",
+      "181720\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = input()\n",
+    "\n",
+    "x = []\n",
+    "\n",
+    "for j in range(len(b) - 1, -1, -1):\n",
+    "    y = a * int(b[j])\n",
+    "    x.append(y)\n",
+    "    print(y)\n",
+    "print(x[0] + x[1] * 10 + x[2] * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0\n",
+      "0 1\n",
+      "1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "zero = [1, 0, 1]\n",
+    "one = [0, 1, 1]\n",
+    "\n",
+    "def fibo_count(n):\n",
+    "    length = len(zero)\n",
+    "    if n >= length:\n",
+    "        for i in range(length, n + 1):\n",
+    "            zero.append(zero[i - 1] + zero[i - 2])\n",
+    "            one.append(one[i - 1] + one[i - 2])\n",
+    "    print(\"{} {}\".format(zero[n], one[n]))\n",
+    "    \n",
+    "t = int(input())\n",
+    "\n",
+    "for _ in range(t):\n",
+    "    fibo_count(int(input()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    return fibonacci(n - 1) + fibonacci(n - 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
