--- a/practice_file.ipynb
+++ b/practice_file.ipynb
@@ -229,6 +229,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def solution(lottos, win_nums):\n",
+    "    rank = {0:6,1:6,2:5,3:4,4:3,5:2,6:1}\n",
+    "    return rank[len(set(lottos)&set(win_nums))+lottos.count(0)],rank[len(set(lottos)&set(win_nums))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "lottos = [44, 1, 0, 0, 31, 25]\n",
+    "win_nums = [31, 10, 45, 1, 6, 19]\n",
+    "\n",
+    "rank = {0:6,1:6,2:5,3:4,4:3,5:2,6:1}\n",
+    "a = rank[len(set(lottos)&set(win_nums))+lottos.count(0)]\n",
+    "b = rank[len(set(lottos)&set(win_nums))]\n",
+    "\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 44, 25, 31} {1, 6, 10, 45, 19, 31} {1, 31} 2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set(lottos),set(win_nums), set(lottos)&set(win_nums), len(set(lottos)&set(win_nums)), lottos.count(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(set(lottos)&set(win_nums))+lottos.count(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
