--- a/Coding_test/220102_cote_greedy.ipynb
+++ b/Coding_test/220102_cote_greedy.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -264,18 +264,20 @@
     "n, k = map(int, input().split())\n",
     "result = 0\n",
     "\n",
-    "while n >= k:\n",
-    "    while n % k != 0:\n",
-    "        n -= 1\n",
-    "        result += 1\n",
+    "while True:\n",
+    "    target = (n // k) * k\n",
+    "    result += (n - target)\n",
+    "    n = target\n",
+    "\n",
+    "    if n < k:\n",
+    "        break\n",
+    "\n",
+    "    result += 1\n",
     "    n //= k\n",
-    "    result += 1\n",
     "\n",
-    "while n > 1:\n",
-    "    n -= 1\n",
-    "    result += 1\n",
-    "\n",
-    "print(result)"
+    "result += (n - 1)\n",
+    "print(result)\n",
+    "    "
    ]
   },
   {
