--- a/practice_file.ipynb
+++ b/practice_file.ipynb
@@ -295,10 +295,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 2059312061028567517\n",
+      ", name: \"/device:GPU:0\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 2914163099\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "  links {\n",
+      "  }\n",
+      "}\n",
+      "incarnation: 13766929579861932460\n",
+      "physical_device_desc: \"device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:01:00.0, compute capability: 6.1\"\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.python.client import device_lib\n",
+    "print(device_lib.list_local_devices())"
+   ]
   }
  ],
  "metadata": {
