--- a/practice_file.ipynb
+++ b/practice_file.ipynb
@@ -295,37 +295,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[name: \"/device:CPU:0\"\n",
-      "device_type: \"CPU\"\n",
-      "memory_limit: 268435456\n",
-      "locality {\n",
-      "}\n",
-      "incarnation: 2059312061028567517\n",
-      ", name: \"/device:GPU:0\"\n",
-      "device_type: \"GPU\"\n",
-      "memory_limit: 2914163099\n",
-      "locality {\n",
-      "  bus_id: 1\n",
-      "  links {\n",
-      "  }\n",
-      "}\n",
-      "incarnation: 13766929579861932460\n",
-      "physical_device_desc: \"device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:01:00.0, compute capability: 6.1\"\n",
-      "]\n"
+      "[4, 8, 9, 10, 20, 27]\n",
+      "[1, 2, 17, 37, 43, 44]\n",
+      "[1, 4, 7, 26, 27, 31]\n",
+      "[7, 14, 19, 22, 27, 31]\n",
+      "[2, 5, 16, 18, 19, 33]\n"
      ]
     }
    ],
    "source": [
-    "from tensorflow.python.client import device_lib\n",
-    "print(device_lib.list_local_devices())"
+    "num_list = [i for i in range(1, 46)]\n",
+    "\n",
+    "for i in range(5):\n",
+    "    win_nums = random.sample(num_list, 6)\n",
+    "    print(sorted(win_nums), end='\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
