--- a/practice_file.ipynb
+++ b/practice_file.ipynb
@@ -43,21 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b101\n"
+      "-3\n"
      ]
     }
    ],
    "source": [
-    "ten1 = int('0b1110', 2)\n",
-    "ten2 = int('0b1001', 2)\n",
-    "print(bin(ten1-ten2))"
+    "ten1 = 2\n",
+    "ten2 = 5\n",
+    "print(ten1-ten2)"
    ]
   },
   {
