22-02-24 solution of the God

--- a/Coding_test/2022/02/220223_cote.ipynb
+++ b/Coding_test/2022/02/220223_cote.ipynb
@@ -238,6 +238,58 @@
     "for i in b:\n",
     "  print(sum(i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Always_True(object):\n",
+    "    def __eq__(self, other):\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def a(b):\n",
+    "  c = Always_True()\n",
+    "  return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yeah~\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = [\"dsfs\",\"sfwewfw\", \"rtyu234234\"]\n",
+    "aa = a(b)\n",
+    "\n",
+    "if aa:\n",
+    "  print(\"yeah~\")\n",
+    "else:\n",
+    "  print(\"sad\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
