--- a/crawling/quote_crawling.ipynb
+++ b/crawling/quote_crawling.ipynb
@@ -2,35 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "driver = webdriver.Chrome(\"D:/self_study/crawling/chromedriver.exe\")\n"
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "\n",
+    "driver = webdriver.Chrome(\"D:/self_study/crawling/chromedriver.exe\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from selenium.webdriver.common.keys import Keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup as bs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,27 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "elName = driver.find_element_by_name(\"query\")\n",
     "elName.clear()\n",
-    "elName.send_keys(\"명언\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "elName.send_keys(\"명언\")\n",
     "elName.send_keys(Keys.RETURN)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +48,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import pandas as pd"
+    "source = driver.page_source\n",
+    "soup = bs(source, 'html.parser')\n",
+    "enquote = soup.find_all(\"p\", {\"class\":\"lngeng\"})[0].text\n",
+    "enauthor = soup.find_all(\"dt\")[0].find(\"span\", {\"class\": \"engnm\"}).text\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enquote: A man who doesn't trust himself can never truly trust anyone else. \n",
+      "enauthor: Cardinal de Retz\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"enquote: {0} \\nenauthor: {1}\".format(enquote,enauthor))"
    ]
   },
   {
@@ -83,8 +83,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_author = []\n",
-    "temp_quote = []\n",
+    "kr_author = []\n",
+    "kr_quote = []\n",
+    "en_author = []\n",
+    "en_quote = []\n",
     "for i in range(len(keywords)):\n",
     "    time.sleep(1)    \n",
     "    quoteTime = driver.find_element_by_link_text(keywords[i])\n",
@@ -92,25 +94,42 @@
     "    source = driver.page_source\n",
     "    soup = bs(source, 'html.parser')\n",
     "    quote = soup.find_all(\"p\", {\"class\":\"lngkr\"})\n",
+    "    enquote = soup.find_all(\"p\", {\"class\":\"lngeng\"})\n",
     "    author = soup.find_all(\"dt\")\n",
     "    for j in range(len(quote)):\n",
     "        authorX = author[j].find(\"a\").get_text()\n",
+    "        authorY = author[j].find(\"span\", {\"class\": \"engnm\"}).text\n",
     "        quoteX = quote[j].text\n",
-    "        temp_author.append(authorX)\n",
-    "        temp_quote.append(quoteX)\n",
-    "x = pd.DataFrame(temp_author, columns=[\"주인\"])\n",
-    "y = pd.DataFrame(temp_quote, columns=[\"명언\"])\n",
+    "        quoteY = enquote[j].text\n",
+    "        kr_author.append(authorX)\n",
+    "        kr_quote.append(quoteX)\n",
+    "        en_author.append(authorY)\n",
+    "        en_quote.append(quoteY)\n",
+    "x = pd.DataFrame({\"k-name\":kr_author,\"k-quote\":kr_quote})\n",
+    "y = pd.DataFrame({\"e-name\":en_author,\"e-quote\":en_quote})\n",
     "quotes_df = pd.concat([x, y], axis=1)\n",
-    "time.sleep(1)   \n"
+    "time.sleep(1) \n",
+    "quotes_df.to_csv(\"quotes.csv\", encoding=\"utf-8\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "quotes_df.to_excel(\"quotes.xlsx\", encoding=\"utf-8\", index=False)"
+    "x = pd.DataFrame({\"k-name\":kr_author,\"k-quote\":kr_quote})\n",
+    "y = pd.DataFrame({\"e-name\":en_author,\"e-quote\":en_quote})\n",
+    "quotes_df = pd.concat([x, y], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quotes_df.to_csv(\"quotes.csv\", encoding=\"utf-8\", index=False)"
    ]
   },
   {
