--- a/crawling/quote_crawling.ipynb
+++ b/crawling/quote_crawling.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enquote: A man who doesn't trust himself can never truly trust anyone else. \n",
-      "enauthor: Cardinal de Retz\n"
+      "enquote: I am extraordinarily patient, provided I get my own way in the end. \n",
+      "enauthor: Margaret Thatcher\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +104,7 @@
     "        kr_author.append(authorX)\n",
     "        kr_quote.append(quoteX)\n",
     "        en_author.append(authorY)\n",
-    "        en_quote.append(quoteY)\n",
-    "x = pd.DataFrame({\"k-name\":kr_author,\"k-quote\":kr_quote})\n",
-    "y = pd.DataFrame({\"e-name\":en_author,\"e-quote\":en_quote})\n",
-    "quotes_df = pd.concat([x, y], axis=1)\n",
-    "time.sleep(1) \n",
-    "quotes_df.to_csv(\"quotes.csv\", encoding=\"utf-8\", index=False)\n"
+    "        en_quote.append(quoteY)"
    ]
   },
   {
