--- a/crawling/naver_hearts.ipynb
+++ b/crawling/naver_hearts.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'3.141.0'"
+       "'4.1.3'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,35 +28,37 @@
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
     "import time\n",
     "\n",
-    "driver = webdriver.Chrome(\"D:/self_study/crawling/chromedriver.exe\")"
+    "driver = webdriver.Chrome()\n",
+    "url = \"https://www.naver.com\"\n",
+    "driver.get(url)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(5):\n",
+    "time.sleep(2)\n",
+    "for i in range(1):\n",
     "    url = \"https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage={}&groupId=0\".format(i+1)\n",
     "    driver.get(url)\n",
     "    time.sleep(3)\n",
-    "    hearts = driver.find_elements_by_class_name(\"u_likeit_list_btn\")\n",
+    "    hearts = driver.find_elements(By.CLASS_NAME,\"u_likeit_list_btn\")\n",
     "    time.sleep(3)\n",
     "    for heart in hearts:\n",
     "        if heart.get_attribute(\"aria-pressed\") == \"false\":\n",
-    "            time.sleep(3)\n",
     "            heart.click()\n",
+    "            time.sleep(1)\n",
     "    time.sleep(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
