22-03-14 youngdok days_count

--- a/crawling/quote_crawling.ipynb
+++ b/crawling/quote_crawling.ipynb
@@ -129,6 +129,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>k-name</th>\n",
+       "      <th>k-quote</th>\n",
+       "      <th>e-name</th>\n",
+       "      <th>e-quote</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>엘라 휠러 윌콕스</td>\n",
+       "      <td>우정이 바탕이 되지 않는 모든 사랑은 모래 위에 지은 집과 같다.</td>\n",
+       "      <td>Ella Wheeler Wilcox</td>\n",
+       "      <td>All love that has not friendship for its base,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>아이스 티</td>\n",
+       "      <td>열정은 세상을 돌게 한다. 사랑은 세상을 좀 더 안전한 곳으로 만들 뿐이다.</td>\n",
+       "      <td>Ice T</td>\n",
+       "      <td>Passion makes the world go round. Love just ma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>가브리엘(코코)샤넬</td>\n",
+       "      <td>세기의 사랑일지라도 참고 견뎌내야 한다.</td>\n",
+       "      <td>Gabriel Coco Chanel</td>\n",
+       "      <td>Great loves too must be endured.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>오드리 햅번</td>\n",
+       "      <td>나는 애정을 받을 엄청난 욕구와 그것을 베풀 엄청난 욕구를 타고났다.</td>\n",
+       "      <td>Audrey Hepburn</td>\n",
+       "      <td>I was born with an enormous need for affection...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>윌리엄 셰익스피어</td>\n",
+       "      <td>모두를 사랑하되, 몇 사람만 믿으라. 누구에게도 잘못을 저지르지 말라.</td>\n",
+       "      <td>William Shakespeare</td>\n",
+       "      <td>Love all, trust a few. Do wrong to none.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       k-name                                       k-quote  \\\n",
+       "0   엘라 휠러 윌콕스         우정이 바탕이 되지 않는 모든 사랑은 모래 위에 지은 집과 같다.    \n",
+       "1       아이스 티   열정은 세상을 돌게 한다. 사랑은 세상을 좀 더 안전한 곳으로 만들 뿐이다.    \n",
+       "2  가브리엘(코코)샤넬                       세기의 사랑일지라도 참고 견뎌내야 한다.    \n",
+       "3      오드리 햅번       나는 애정을 받을 엄청난 욕구와 그것을 베풀 엄청난 욕구를 타고났다.    \n",
+       "4   윌리엄 셰익스피어      모두를 사랑하되, 몇 사람만 믿으라. 누구에게도 잘못을 저지르지 말라.    \n",
+       "\n",
+       "                e-name                                            e-quote  \n",
+       "0  Ella Wheeler Wilcox  All love that has not friendship for its base,...  \n",
+       "1                Ice T  Passion makes the world go round. Love just ma...  \n",
+       "2  Gabriel Coco Chanel                   Great loves too must be endured.  \n",
+       "3       Audrey Hepburn  I was born with an enormous need for affection...  \n",
+       "4  William Shakespeare           Love all, trust a few. Do wrong to none.  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_csv = pd.read_csv(\"D:/Portfolio/save2day/src/asset/quotes.csv\")\n",
+    "load_csv.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_csv.to_json(\"D:/Portfolio/save2day/src/asset/quotes.json\", orient=\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
