--- a/practice_file.ipynb
+++ b/practice_file.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,18 +304,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 8, 9, 10, 20, 27]\n",
-      "[1, 2, 17, 37, 43, 44]\n",
-      "[1, 4, 7, 26, 27, 31]\n",
-      "[7, 14, 19, 22, 27, 31]\n",
-      "[2, 5, 16, 18, 19, 33]\n"
+      "[1, 8, 25, 32, 33, 41]\n",
+      "[19, 20, 24, 31, 32, 33]\n",
+      "[14, 21, 23, 33, 42, 45]\n",
+      "[6, 13, 27, 32, 36, 41]\n",
+      "[2, 6, 8, 12, 30, 43]\n"
      ]
     }
    ],
@@ -325,6 +325,54 @@
     "for i in range(5):\n",
     "    win_nums = random.sample(num_list, 6)\n",
     "    print(sorted(win_nums), end='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140722321823792\n",
+      "140722321823824\n",
+      "140722321823856\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 11\n",
+    "z = 12\n",
+    "\n",
+    "for i in x,y,z:\n",
+    "  print(id(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2063149262912\n",
+      "140722321823792\n",
+      "140722321823824\n",
+      "140722321823856\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [x,y,z]\n",
+    "print(id(a))\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "  print(id(a[i]))"
    ]
   },
   {
