22-03-19 step 1 all clear!

--- a/Coding_test/2022/03/220319_cote.ipynb
+++ b/Coding_test/2022/03/220319_cote.ipynb
@@ -126,6 +126,263 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 최대공약수와 최소공배수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 12]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import gcd\n",
+    "\n",
+    "def solution(n, m):\n",
+    "    return [(GCD:=gcd(n,m)), n*m//GCD]\n",
+    "\n",
+    "solution(3, 12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 콜라츠 추측"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1-1. 입력된 수가 짝수라면 2로 나눕니다. \n",
+    "#### 1-2. 입력된 수가 홀수라면 3을 곱하고 1을 더합니다.\n",
+    "#### 2. 결과로 나온 수에 같은 작업을 1이 될 때까지 반복합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "4\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(num):\n",
+    "    answer = 0\n",
+    "    for i in range(500):\n",
+    "        if num == 1:\n",
+    "            break\n",
+    "        if num % 2:\n",
+    "            num = num * 3 + 1\n",
+    "            answer += 1\n",
+    "        else:\n",
+    "            num = num // 2\n",
+    "            answer += 1\n",
+    "    if num != 1:\n",
+    "        return -1       \n",
+    "    return answer\n",
+    "\n",
+    "print(solution(6))\n",
+    "print(solution(16))\n",
+    "print(solution(626331))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 평균 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(arr):\n",
+    "    return sum(arr)/len(arr)\n",
+    "\n",
+    "print(solution([1,2,3,4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 하샤드 수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(x):\n",
+    "    y = sum(list(map(int, list(str(x)))))\n",
+    "    if x % y:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "print(solution(10))\n",
+    "print(solution(11))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 핸드폰 번호 가리기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******4444\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(phone_number):\n",
+    "    return phone_number[(n:=len(phone_number))-4:].rjust(n, '*')\n",
+    "\n",
+    "print(solution(\"01033334444\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4, 6], [7, 9]]\n",
+      "[[4], [6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(arr1, arr2):\n",
+    "    answer = []\n",
+    "    for i, j in zip(arr1, arr2):\n",
+    "        temp = []\n",
+    "        for k in range(len(arr1[0])):\n",
+    "            temp.append(i[k]+j[k])\n",
+    "        answer.append(temp)\n",
+    "    return answer\n",
+    "\n",
+    "print(solution([[1,2],[2,3]], [[3,4],[5,6]]))\n",
+    "print(solution([[1],[2]],[[3],[4]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# x만큼 간격이 있는 n개의 숫자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n",
+      "[4, 8, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(x, n):\n",
+    "    return [(i * x) for i in range(1, n + 1)]\n",
+    "\n",
+    "print(solution(2, 5))\n",
+    "print(solution(4, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 직사각형 별찍기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "*****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = map(int, input().strip().split(' '))\n",
+    "\n",
+    "for i in range(b):\n",
+    "  print('*'*a)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
