--- a/Coding_test/2022/03/220325_cote.ipynb
+++ b/Coding_test/2022/03/220325_cote.ipynb
@@ -86,11 +86,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 짝지어 제거하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(s):\n",
+    "    temp = []\n",
+    "    for i in s:\n",
+    "        if not temp:\n",
+    "            temp.append(i)\n",
+    "        elif temp[-1] == i:\n",
+    "            temp.pop()\n",
+    "        else:\n",
+    "            temp.append(i)\n",
+    "    return 1 if not temp else 0\n",
+    "\n",
+    "print(solution(\"baabaa\"))\n",
+    "print(solution(\"cdcd\"))"
+   ]
   }
  ],
  "metadata": {
