--- a/Coding_test/2022/03/220330_cote.ipynb
+++ b/Coding_test/2022/03/220330_cote.ipynb
@@ -9,14 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15808\n"
+      "14 0\n",
+      "1\n",
+      "15 0\n",
+      "1\n",
+      "2\n"
      ]
     }
    ],
@@ -25,7 +29,7 @@
     "\n",
     "cnt = 0\n",
     "while bin(n).count('1') > k:\n",
-    "    plus = 2 ** (bin(n)[::-1].index('1'))\n",
+    "    plus = 2 ** (bin(n).replace(\"0b\",\"\").index(\"1\"))\n",
     "    cnt += plus\n",
     "    n += plus\n",
     "\n",
