--- a/Coding_test/2022/04/220401_cote.ipynb
+++ b/Coding_test/2022/04/220401_cote.ipynb
@@ -30,6 +30,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 최소, 최대"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 35\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "nums = list(map(int, input().split()))\n",
+    "\n",
+    "print(min(nums), max(nums))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 나는 요리사다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "\n",
+    "for _ in range(5):\n",
+    "  scores.append(sum(list(map(int, input().split()))))\n",
+    "\n",
+    "print(scores.index(m:=max(scores))+1,m)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
