--- a/Coding_test/2022/04/220402_cote.ipynb
+++ b/Coding_test/2022/04/220402_cote.ipynb
@@ -36,6 +36,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 단어 정렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "im\n",
+      "it\n",
+      "no\n",
+      "but\n",
+      "more\n",
+      "wait\n",
+      "wont\n",
+      "yours\n",
+      "cannot\n",
+      "hesitate\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "wordList = []\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    word = input()\n",
+    "    wordList.append((len(word), word))\n",
+    "\n",
+    "wordList = list(set(wordList))\n",
+    "wordList.sort(key=lambda x: (x[0], x[1]))\n",
+    "\n",
+    "for length, word in wordList:\n",
+    "    print(word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 소수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,n = map(int, input().split())\n",
+    "\n",
+    "a %= b\n",
+    "\n",
+    "for _ in range(n - 1):\n",
+    "    a = (a * 10) % b\n",
+    "\n",
+    "print((a * 10) // b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
