--- a/Coding_test/2022/04/220404_cote.ipynb
+++ b/Coding_test/2022/04/220404_cote.ipynb
@@ -469,11 +469,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 스택"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "arr = []\n",
+    "for _ in range(n):\n",
+    "    size = len(arr)\n",
+    "    temp = input().split()\n",
+    "    if temp[0] == \"push\":\n",
+    "        arr.append(int(temp[1]))\n",
+    "    elif size and temp[0] == \"pop\":\n",
+    "        print(arr.pop())\n",
+    "    elif temp[0] == \"size\":\n",
+    "        print(size)\n",
+    "    elif size and temp[0] == \"top\":\n",
+    "        print(arr[-1])\n",
+    "    elif size and temp[0] == \"empty\":\n",
+    "        print(0)\n",
+    "    else:\n",
+    "        print(-1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "\n",
+    "n = int(sys.stdin.readline())\n",
+    "\n",
+    "arr = []\n",
+    "for _ in range(n):\n",
+    "    temp = sys.stdin.readline().split()\n",
+    "    if len(temp) == 2:\n",
+    "        arr.append(int(temp[1]))\n",
+    "    elif temp[0] == \"pop\":\n",
+    "        if len(arr) == 0:\n",
+    "            print(-1)\n",
+    "        else:\n",
+    "            print(arr.pop())\n",
+    "    elif temp[0] == \"size\":\n",
+    "        print(len(arr))\n",
+    "    elif temp[0] == \"top\":\n",
+    "        if len(arr) == 0:\n",
+    "            print(-1)\n",
+    "        else:\n",
+    "            print(arr[-1])\n",
+    "    else:\n",
+    "        if len(arr):\n",
+    "            print(0)\n",
+    "        else:\n",
+    "            print(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 쇠막대기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "metal_sticks = input()\n",
+    "stack = []\n",
+    "answer = 0\n",
+    "\n",
+    "for i in range(len(metal_sticks)):\n",
+    "    if metal_sticks[i]==\"(\":\n",
+    "        stack.append(metal_sticks[i])\n",
+    "    else:\n",
+    "        if metal_sticks[i - 1] == \"(\":\n",
+    "            stack.pop()\n",
+    "            answer += len(stack)\n",
+    "        else:\n",
+    "            stack.pop()\n",
+    "            answer += 1\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 크게 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, k = map(int, input().split())\n",
+    "number = list(input())\n",
+    "answer = []\n",
+    "cnt = k\n",
+    "\n",
+    "for num in number:\n",
+    "    while answer and cnt>0 and answer[-1] < num:\n",
+    "        del answer[-1]\n",
+    "        cnt -= 1\n",
+    "    answer.append(num)\n",
+    "\n",
+    "print(''.join(answer[:n-k]))"
+   ]
   }
  ],
  "metadata": {
