--- a/Coding_test/2022/04/220404_cote.ipynb
+++ b/Coding_test/2022/04/220404_cote.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -604,12 +604,19 @@
     "\n",
     "for num in number:\n",
     "    while answer and cnt>0 and answer[-1] < num:\n",
-    "        del answer[-1]\n",
+    "        answer.pop()\n",
     "        cnt -= 1\n",
     "    answer.append(num)\n",
     "\n",
     "print(''.join(answer[:n-k]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
