--- a/Coding_test/2022/04/220405_cote.ipynb
+++ b/Coding_test/2022/04/220405_cote.ipynb
@@ -133,11 +133,191 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 큐2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "-1\n",
+      "0\n",
+      "1\n",
+      "-1\n",
+      "0\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import deque\n",
+    "\n",
+    "n = int(input())\n",
+    "q = deque([])\n",
+    "for _ in range(n):\n",
+    "    size = len(q)\n",
+    "    temp = input().split()\n",
+    "    if temp[0] == \"push\":\n",
+    "        q.append(temp[1])\n",
+    "    elif size and temp[0] == \"pop\":\n",
+    "        print(q.popleft())\n",
+    "    elif temp[0] == \"size\":\n",
+    "        print(len(q))\n",
+    "    elif temp[0] == \"empty\":\n",
+    "        if size:\n",
+    "            print(0)\n",
+    "        else:\n",
+    "            print(1)\n",
+    "    elif size and temp[0] == \"front\":\n",
+    "        print(q[0])\n",
+    "    elif size and temp[0] == \"back\":\n",
+    "        print(q[-1])\n",
+    "    else:\n",
+    "        print(-1)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from queue import deque\n",
+    "import sys\n",
+    "n = int(input())\n",
+    "q = deque([])\n",
+    "for _ in range(n):\n",
+    "    size = len(q)\n",
+    "    temp = sys.stdin.readline().split()\n",
+    "    if temp[0] == \"push\":\n",
+    "        q.append(temp[1])\n",
+    "    elif size and temp[0] == \"pop\":\n",
+    "        print(q.popleft())\n",
+    "    elif temp[0] == \"size\":\n",
+    "        print(len(q))\n",
+    "    elif temp[0] == \"empty\":\n",
+    "        if size:\n",
+    "            print(0)\n",
+    "        else:\n",
+    "            print(1)\n",
+    "    elif size and temp[0] == \"front\":\n",
+    "        print(q[0])\n",
+    "    elif size and temp[0] == \"back\":\n",
+    "        print(q[-1])\n",
+    "    else:\n",
+    "        print(-1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 카드2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import deque\n",
+    "\n",
+    "n = int(input())\n",
+    "q = deque([i for i in range(1, n + 1)])\n",
+    "\n",
+    "while len(q) > 1:\n",
+    "    q.popleft()\n",
+    "    q.append(q.popleft())\n",
+    "\n",
+    "print(q[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 뱀"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def direction_change(d, c):\n",
+    "    if c == \"L\":\n",
+    "        d = (d - 1) % 4\n",
+    "    else:\n",
+    "        d = (d + 1) % 4\n",
+    "    return d\n",
+    "\n",
+    "n = int(input())\n",
+    "k = int(input())\n",
+    "maps = [[0] * n for _ in range(n)]\n",
+    "\n",
+    "for _ in range(k):\n",
+    "    a, b = map(int, input().split())\n",
+    "    maps[a - 1][b - 1] = 1\n",
+    "\n",
+    "l = int(input())\n",
+    "times = {}\n",
+    "for i in range(l):\n",
+    "    x, c = input().split()\n",
+    "    times[int(x)] = c\n",
+    "\n",
+    "dy = [-1, 0, 1, 0]\n",
+    "dx = [0, 1, 0, -1]\n",
+    "\n",
+    "direction = 1\n",
+    "time = 1\n",
+    "y, x = 0, 0\n",
+    "snake = deque([[y, x]])\n",
+    "maps[y][x] = 2\n",
+    "\n",
+    "while True:\n",
+    "    y, x = y + dy[direction], x + dx[direction]\n",
+    "    if 0 <= y < n and 0 <= x < n and maps[y][x] != 2:\n",
+    "        if not maps[y][x] == 1:\n",
+    "            delY, delX = snake.popleft()\n",
+    "            maps[delY][delX] = 0\n",
+    "        maps[y][x] = 2\n",
+    "        snake.append([y, x])\n",
+    "        if time in times.keys():\n",
+    "            direction = direction_change(direction, times[time])\n",
+    "        time += 1\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "print(time)"
+   ]
   }
  ],
  "metadata": {
